This file contains the changelog of the tool (incomplete)

Important:
- Previously saved settings will not work together with this release
- Previously exported genres, npc games and platforms will not work together with this release
- Restore points that have been created prior to this release will not be able to get restored automatically because the file path has changed

Coming in v2.3.0

New feature:

The tool now works under Linux

Other:

Settings file now uses the .toml file format
Improved text area outputs when importing, exporting, adding or removing mods
Improved the error handling massively: Whenever something goes wrong the stacktrace is now written to the text area and an explanation of what went wrong is displayed
Internal code has been massively improved
Internal handling of paths and files has been improved: Renamed some folders to be more consistent
(Improved the way imports work: Importing things should no longer fail when a required mod is missing, instead a random one will be selected. This has already been implemented for some mods but this update adds this feature to all mods)
 -> Diesen changelog eintrag ggf. rausnehmen, da Import/Export ja eh neu geschrieben wird


Coming in v2.1.0

New  feature:

Added support for hardware: You can now add custom hardware that can be used to create your own consoles
Added support for hardware features
You can now edit the existing genre/theme fits: This feature is located under Mods -> Themes
It is now possible to create new initial backups

Other:

Internal coding improvements
Updated the default content files to include the latest changes

Bug fixes:

Fixed: Removing themes will fail sometimes
Fixed bug #60 - The genre summary does not fit on the whole screen

Coming in v2.0.3

Other:

Added two translations that have been missing
Renamed violence level to age rating in add theme menu. The age ratings are now displayed and no longer the values 0-3.